<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>

    <string name="title_devices"></string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="Bluetooth_switch">Bluetooth</string>
    <string name="RedLED">Red LED</string>
    <string name="GreenLED">Green LED</string>
    <string name="Capsense">CapSense Value =</string>
    <string name="NotifyOff">"Notify Off"</string>
    <string name="Notify">Notify CapSense</string>
    <string name="NotifyJoystick">Notify Joystick</string>
    <string name="NotifySensorData">Notify Sensor Data</string>

    <string name="NoTouch">"No Touch"</string>
    <string name="deviceScanWelcome">Please activate Bluetooth and location services access to start scanning for Bluetooth devices.</string>
    <string name="capledWelcome">Here you can connect to the CapLED plattform of Cypress and control the peripherie on it. If notify is activated the CapSense will be scanned to register touch activities.</string>
    <string name="capledWelcomeSettings">In the settings tab you can activate CapSense notifications, reconnect to the CapLED device and analyse the device status.</string>
    <string name="cpppWelcome">Welcome to the BLE API of the CPPP Board.</string>
    <string name="cpppSettings">In the settings you can disconnect the BLE connection.</string>
    <string name="capSenseHeader">CapSense</string>
    <string name="capSenseValue">CapSense value: </string>
    <string name="joystick1Xvalue">Joystick X: </string>
    <string name="sensorDataValue">Sensor Data: </string>
    <string name="ableDeviceControlWelcome">In this generic control area you can connect and disconnect to a BLE device running a GATT server. Furthermore you can analyze its GATT services and characteristics.</string>


    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <string name="start_scan">START SCAN</string>
    <string name="stop_scan">STOP SCAN</string>

    <!-- Menu items -->
    <string name="menu_connect">CONNECT</string>
    <string name="menu_disconnect">DISCONNECT</string>
    <string name="menu_scan">SCAN</string>
    <string name="menu_stop">STOP</string>
</resources>
